# 408-RAG-Assistant

./: 408-RAG-Project-Analysis.md  README.md  pyproject.toml  requirements.txt
src/eval/: test_rag_system.py
src/rag/: document_processor.py  embedding_apis.py  llm_apis.py  ocr_processor.py  rag_main.py  reranker.py  vector_db.py
